Refactor: Centralizar configuración CORS en SecurityConfig